...
    <string name="Name">Name</string>
    <string name="AddPath">Add path</string>
    <string name="Path">Path</string>
    <string name="Delete">Delete</string>
    <string name="title_activity_add_connection" translatable="false">AddConnectionActivity</string>
    <string name="Save">Save</string>
    <string name="ConfigurePaths">Configure paths</string>
    <string name="RemotePath">Remote path</string>
    <string name="SelectScheduleType">Select schedule type</string>
    <string name="Daily">Daily</string>
    <string name="Weekly">Weekly</string>
    <string name="Monthly">Monthly</string>
    <string name="Yearly">Yearly</string>
...
